Alterado variáveis env que não eram utilizadas, assim como definido novos itens dentro do gitignore, além disso foi ajustado a arquivo de configuração para contemplar a geração de reports e por fim um pequeno ajuste no arquivo yml.

--- a/github/workflows/cypress.yml
+++ b/github/workflows/cypress.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Rodar testes Cypress (modo headless)
         run: npx cypress run
 
-      - name: Salvar screenshots e vídeos
+      - name: Salvar screenshots, reports e vídeos
         if: failure()
         uses: actions/upload-artifact@v4
         with:
@@ -33,3 +33,4 @@ jobs:
           path: |
             cypress/screenshots
             cypress/videos
+            cypress/results
