--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-cypress.env.json
-cypress/videos/
-cypress/screenshots/
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Sistema operacional
+.DS_Store
+Thumbs.db
+
+# Arquivos de configuração locais
+.env
+.env.local
+
+# Relatórios de testes
+cypress/results/
+cypress/reports/
+
+# Outros
 node_modules/
+screenshots/
